# defmt-persist

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: changelog.yml  ci.yml
src/: atomic_waker.rs  lib.rs  logger.rs  ring_buffer.rs
src/logger/: rtt.rs  semihosting.rs
testsuite/: Cargo.toml  build.rs  memory.x
testsuite/.cargo/: config.toml
testsuite/examples/: async_test.rs  basic.rs  corrupt_test.rs  identifier_test.rs  panic_test.rs  persist_test.rs  wraparound_test.rs
testsuite/expected/: async_test.expected  basic.expected  basic.txt  identifier_test.expected  panic_test.expected  persist_test.expected  wraparound_test.expected
testsuite/src/: lib.rs  uart.rs
xtask/: Cargo.toml
xtask/src/: build.rs  corrupt.rs  defmt.rs  main.rs  panic.rs  persist.rs  qemu.rs  runner.rs  standard.rs
