[workspace]
members = ["xtask", "testsuite"]

[package]
name = "defmt-persist"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Nils Fitinghoff"]
description = "Persistent defmt logger that survives resets"
keywords = ["defmt", "logging", "embedded", "no_std"]
categories = ["embedded", "no-std"]
repository = "https://github.com/korken89/defmt-persist"

[dependencies]
defmt = "1.0.1"
critical-section = "1.2"
cortex-m-semihosting = { version = "0.5", optional = true }

[features]
default = [
    "rtt",
    "async-await",
    "ecc",
    # NOTE(defmt-persist): It is *strongly* recommended to use the rzcobs encoding when
    # using this crate. If the buffer is ever filled, then the remaining
    # bytes will be discarded, which will corrupt the message stream.
    #
    # Because rzcobs is delimited by zero bytes, it is possible to recover
    # from this corruption, with the loss of a limited number of messages.
    # When using the "raw" encoding, you MUST ensure that the buffer is
    # never overfilled, as it will NOT be possible to recover from this
    # error condition.
    "defmt/encoding-rzcobs"
]
async-await = [ ]
rtt = [ ]
# Adds ECC cache flush for MCUs with ECC-protected RAM (32-bit or 64-bit),
# such as some STM32 series (e.g., STM32H7, STM32H5).
#
# These MCUs use a single-word ECC write cache. Writes stay in cache until
# a write to a different word flushes them. Without flushing, a reset could
# lose data that was written but still sitting in the cache.
#
# With this feature, after each write to the ring buffer (indexes and/or data),
# a single byte is written to a dedicated flush field, forcing the ECC cache
# to commit.
#
# See: https://community.st.com/t5/stm32-mcus/faq-stm32-sram-backup-sram-content-is-not-preserved-after-reset/ta-p/861433
ecc = [ ]
# Enable semihosting output for QEMU testing. When enabled, defmt frames are
# written to semihosting stdout in addition to RTT and the ring buffer.
qemu-test = ["dep:cortex-m-semihosting"]
