[package]
name = "testsuite"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt-persist = { path = ".." }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
defmt = "1.0.1"

[features]
default = ["defmt-persist/default"]
