[package]
name = "testsuite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
defmt-persist = { path = ".." }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
defmt = "1.0.1"

[features]
default = ["defmt-persist/default", "defmt-persist/qemu-test"]
