[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
defmt-decoder = { version = "1.0", features = ["unstable"] }
defmt-persist = { path = "..", default-features = false, features = ["qemu-test", "ecc"] }
tempfile = "3"
